# cloudmesh-vpn

./: .bumpversion.cfg  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  TODO.md  VERSION  bumpversion.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  setup.pyold
cloudmesh/vpn/: vpn.py  windows.py
cloudmesh/vpn/command/: vpn.py
cloudmesh/vpn/etc/: connect-uva.exp
docker-vpn/: Dockerfile  Makefile  README.md  requirements.txt  setup.py
src/cloudmesh/vpn/: organizations.py  organizations.yaml  profiles.py  vpn.py  windows.py
src/cloudmesh/vpn/command/: vpn.py
src/cloudmesh/vpn/strategies/: base.py  linux.py  mac_cisco.py  mac_openconnect_decrypted.py  mac_openconnect_keychain.py  mac_openconnect_pw.py  windows.py
tests/: test_shell.py  test_vpn.py  test_vpn_mac.py
