[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools >= 69",
    "wheel >= 0.42",
    "pip >= 23.2.1"
]

[project]
name = "cloudmesh-vpn"
version = "5.0.8"
description = "Virtual Private Network connection in the cloudmesh suite"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Gregor von Laszewski", email = "laszewski@gmail.com"},
    {name = "J.P. Fleischer", email = "jacquespfleischer@gmail.com"}

]
maintainers = [
    {name = "Gregor von Laszewski", email = "laszewski@gmail.com"},
    {name = "J.P. Fleischer", email = "jacquespfleischer@gmail.com"}
]
keywords = ["helper library", "cloudmesh"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: Other Environment",
    "Environment :: Plugins",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: System",
    "Topic :: System :: Distributed Computing",
    "Topic :: System :: Shells",
    "Topic :: Utilities",
]

dependencies = [
    "cloudmesh-cmd5",
    "cloudmesh-cmd5",
    "cloudmesh-sys",
    "cloudmesh-inventory",
    "cloudmesh-configuration",
    "keyring",
    "pexpect",
    "pytest",
]

[project.urls]
Homepage = "https://github.com/cloudmesh/cloudmesh-vpn"
Documentation = "https://github.com/cloudmesh/cloudmesh-vpn/blob/main/README.md"
Repository = "https://github.com/cloudmesh/cloudmesh-vpn.git"
Issues = "https://github.com/cloudmesh/cloudmesh-vpn/issues"
Changelog = "https://github.com/cloudmesh/cloudmesh-vpn/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]
include = ["cloudmesh.vpn", "cloudmesh.vpn.*"]
